# soundscape

./: .clang-format  .gitignore  CMakeLists.txt  README.md  soundscape.spec
.github/workflows/: ci.yml  coverage.yml  lin.yml  mac.yml  win.yml
cmake/: ClangFormat.cmake  CodeCoverage.cmake
debian/: changelog  control  copyright  docs  gbp.conf  rules  salsa-ci.yml  watch
debian/patches/: 0001-debhelper-will-install-README.patch  0002-patch-README-for-Debian.patch  series
examples/rain_and_thunder/: README  rain_and_thunder.json
examples/river/: README  river.json
icons/: icons.qrc
linux/: CMakeLists.txt
linux/applications/: soundscape.desktop
linux/metainfo/: soundscape.metainfo.xml  soundscape.metainfo.xml.in
rpm/: soundscape.spec
src/: .clang-format  CMakeLists.txt  IconLabel.cpp  IconLabel.h  JsonRW.cpp  JsonRW.h  Main.cpp  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  PositionLabel.cpp  PositionLabel.h  PositionSlider.cpp  PositionSlider.h  Status.cpp  Status.h  Track.cpp  Track.h  TrackControls.cpp  TrackControls.h  TrackSettings.cpp  TrackSettings.h  Transition.cpp  Transition.h  TransitionIcon.cpp  TransitionIcon.h  Version.h.in  Volume.cpp  Volume.h
src/icons/: icons.qrc
src/styles/: styles.qrc  track-controls.css
src/translations/: .gitattributes  soundscape_de.ts  soundscape_it.ts  soundscape_ru.ts
styles/: status.css  styles.qrc  transition-icon.css
tests/: CMakeLists.txt  TestJsonRW.cpp  TestMainWindow.cpp  TestPlayer.cpp  TestPositionLabel.cpp  TestTrack.cpp  TestTrackControls.cpp  TestTrackSettings.cpp  TestTransition.cpp
tests/media/: media.qrc  video_0100.webm
